# Python-6-Web-HomeWork-10

./: .gitignore  README.md  fibonacci.py  main.py  pyproject.toml
models/: models.py
units/: adressbook.py  file_parser.py  notebook.py  paginator.py  redis_lru.py
