[tool.poetry]
name = "homework-10"
version = "0.1.0"
description = ""
authors = ["VlodyaKr <vlodya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"
redis-lru = "^0.1.2"
mongoengine = "^0.24.2"
prompt-toolkit = "^3.0.31"
aioshutil = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
